# ai-sinmungo

./: .gitignore  README.md  render.yaml
backend/: .env.example  .vercelignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: llm1_structurer.py  llm2_generator.py  llm2_searcher.py  llm3_reviewer.py  llm4_visualizer.py  llm_bill_generator.py  llm_improver.py  llm_questioner.py  router.py
backend/app/aggregator/: cluster.py  trigger.py
backend/app/api/: routes_admin.py  routes_bill.py  routes_chat.py  routes_cluster.py  routes_conversation.py  routes_result.py  routes_upload.py  routes_voice.py
backend/app/graph/: __init__.py  pipeline.py
backend/app/rag/: __init__.py  indexer.py  law_api.py  retriever.py
backend/app/schemas/: __init__.py  analysis.py  proposal.py  routing.py
backend/app/storage/: __init__.py  db.py  models.py  seed.py
backend/app/stt/: __init__.py  whisper_client.py
backend/app/utils/: doc_generator.py  file_extractor.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin_ch/: page.tsx
frontend/app/cluster/[cluster_id]/: page.tsx
frontend/app/clusters/: page.tsx
frontend/app/complaints/: page.tsx
frontend/app/proposal/[proposal_id]/: page.tsx
frontend/app/result/[proposal_id]/: page.tsx
frontend/app/result/[session_id]/: page.tsx
frontend/components/: BrandLogo.tsx  ChatBox.tsx  ClusterStatus.tsx  ConversationBox.tsx
(+1 files in other folders)
